
---------------------------------------------------------------------------------------------------------------------

V4.0.9:
[Control Loop]
* Added: Basic pitch hold mode
* Added: Improved pitch flight director computation
* Added: Better adjustment for takeoff flight director pitch bar (New config required)

[Logic]
* Added: Ability to allow modes to be selected on the ground (New config required)
* Added: Third autopilot option
* Added: Basic pitch hold mode
* Added: Throttle mode annunciation property mode/thr
* Added: Ability to adjust maxmimum target knots and mach (New config required)
* Fixed: Ensure route manager errors do not block ITAF loop
* Changed: Speed mode text property has changed from mode/thr to mode/spd

[GUI]
* Fixed: FPA not syncing when inactive
* Fixed: Floating point error with FPA and Mach

---------------------------------------------------------------------------------------------------------------------

V4.0.8:
[Control Loop]
* Added: Internal control drivers for overridable yoke (New config required)
* Added: New speed on pitch control loop without integrator
* Added: Ability to not drive throttle directly with autothrottle
* Added: CWS interrupt ability
* Added: More flexible bank limit system with overrides (New config required)
* Added: Ability to adjust FLCH acceleration/deceleration rate (New config required)
* Added: Improved flight director pitch calculation
* Added: Ability to adjust flight director pitch bar when on the ground in takeoff mode
* Added: T/O roll mode now includes ability to capture current heading
* Added: Wing level mode replaced with basic roll hold
* Changed: Tweaked rate scheme slightly

[Logic]
* Added: Ability to not drive throttle directly with autothrottle
* Added: More flexible bank limit system with overrides (New config required)
* Added: T/O roll mode now includes ability to capture current heading
* Added: Wing level mode replaced with basic roll hold